fix z-index

--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -9,6 +9,7 @@
   box-sizing border-box
   top 0
   transition all .2s
+  z-index 2
   &._scrolled
     background rgba(10, 7, 20, 0.7)
     height 70px
